src/model.peg
grammar MODEL

model <- compartment+ whitespace? parameter* whitespace? reaction*
compartment <- `(` whitespace? `comp` whitespace? ident whitespace? value whitespace? `)` whitespace?
parameter <- `(` whitespace? `param` whitespace? ident whitespace? value whitespace? `)` whitespace?
reaction <- `(` whitespace? `react` whitespace? orig whitespace? dest whitespace? calc whitespace? `)` whitespace?
orig <- ident
dest <- ident
ident <- [A-Za-z0-9]+
value <- [0-9\.]+
whitespace <- [\s*]
calc <- `{` [^}]* `}`
